# dfe

./: .gitignore  CLAUDE.md  Cargo.toml  LICENCE  README.md  cancelar.xml  cancelar_response.xml  inf_evento.xml  manifestacao.xml  manifestacao_inf_evento.xml  manifestacao_response.xml  nfe_request.xml  sample55.xml  sample65.xml  tested_response_from_sefaz.xml  xml_validation_error.xml
docs/: cancelamento.md  danfe.md  distribuicao.md  emissao-nfe-nfce.md  erros.md  escpos.md  icms-pis-cofins.md  instalacao.md  manifestacao.md  notas-roadmap.md  status-webservice.md  testes.md
shema/exemplo/: consStatServ_v4.00.xml
src/: error.rs  lib.rs
src/cancelar/: mod.rs
src/danfe/: builder.rs
src/danfe/actions/: mod.rs  pdf_builder_80mm.rs  pdf_builder_a4.rs  pdf_builder_nfce_80mm.rs
src/danfe/validations/: mod.rs
src/data/: webservices.json
src/distribuicao/: mod.rs  service.rs  test.rs
src/emissao/: det.rs  emit.rs  inf_adic.rs  mod.rs  pag.rs  total.rs  transp.rs
src/emissao/det_process/: entity.rs  mod.rs
src/emissao/flag/: mod.rs
src/escpos/: commands.rs  mod.rs  nfce.rs
src/interno/: cert.rs  chave_acesso.rs  chave_acesso_props.rs  cnpj_cpf.rs  connection.rs  dest_xml.rs  extract.rs  mod.rs  validation.rs  ws.rs
src/manifestacao/: mod.rs
src/nfe/: certificados.rs  chnfe_from_xml.rs  from_xml.rs  mod.rs  webservices.rs
src/nfe/autorizacao/: dest.rs  det.rs  emit.rs  ide.rs  inf_adic.rs  mod.rs  pag.rs  total.rs  transp.rs
src/nfe/autorizacao/det_process/: entity.rs  mod.rs
src/nfe/cancelar/: mod.rs
src/nfe/common/: cert.rs  chave_acesso.rs  cleaner.rs  config.rs  config_file.rs  dates.rs  extract.rs  mod.rs  sign.rs  validation.rs  ws.rs
src/nfe/connection/: mod.rs
src/nfe/manifestacao/: mod.rs
src/nfe/mod_status_service/: mod.rs
src/nfe/types/: autorizacao4.rs  cancelar.rs  chave_acesso_props.rs  config.rs  manifestacao.rs  mod.rs
src/nfe/xml_extractor/: mod.rs  structs.rs
src/nfe/xml_rules/: mod.rs
src/nfe/xml_rules/dest/: mod.rs
src/nfe/xml_rules/dest/models/: mod.rs
src/nfe/xml_rules/ide/models/: mod.rs
src/pdf/: builder.rs  mod.rs
src/pdf/actions/: mod.rs  pdf_builder_80mm.rs
src/pdf/validations/: mod.rs
src/status/: endpoint.rs  mod.rs  parser.rs  service.rs  xml.rs
src/status/validation/: mod.rs
src/tipos/: cancelar.rs  config.rs  emissao.rs  mod.rs  service_status.rs
src/xml_extractor/: mod.rs  structs.rs
testes/nsu/: 000000000000001_descompactado.xml  000000000000002_descompactado.xml  000000000000003_descompactado.xml  000000000000004_descompactado.xml  000000000000005_descompactado.xml  000000000000006_descompactado.xml  000000000000007_descompactado.xml  000000000000008_descompactado.xml  000000000000009_descompactado.xml  000000000000010_descompactado.xml  000000000000011_descompactado.xml  000000000000012_descompactado.xml  000000000000013_descompactado.xml  000000000000014_descompactado.xml  000000000000015_descompactado.xml  000000000000016_descompactado.xml  000000000000017_descompactado.xml  000000000000018_descompactado.xml  000000000000019_descompactado.xml  000000000000020_descompactado.xml  000000000000021_descompactado.xml  000000000000022_descompactado.xml  000000000000023_descompactado.xml  000000000000024_descompactado.xml  000000000000025_descompactado.xml  000000000001774_descompactado.xml  000000000001775_descompactado.xml  000000000001776_descompactado.xml  000000000001777_descompactado.xml
