[package]
name = "dfe"
version = "0.5.8"
edition = "2021"
description = "DFE - Documentos Fiscais Eletrônicos Brasileiros"
license = "MIT"
readme = "README.md"
keywords = ["rust", "nfe", "dfe"]
categories = ["api-bindings", "parsing"]

homepage = "https://github.com/GustavoOta/dfe"
repository = "https://github.com/GustavoOta/dfe"

exclude = [
    "dfe/manuais_sefaz/*",
    "dfe/shema/*",
    "dfe/thirdparty/*"
]

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
branch = "master"
install = ["libxml2"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static", install = ["libxml2"] }

[profile.release]
debug = false

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
chrono-tz = "0.10.0"
hex = "0.4.3"
libxml = "=0.3.3"
quick-xml = { version = "0.37.1", features = ["encoding", "serialize"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["native-tls", "json", "gzip", "blocking"] }
rust_decimal = "1.38.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
printpdf = "0.7.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
barcoders = "2.0.0"
flate2 = "1.0"
qrcodegen = "1.8"
